cant figure out how to imort data from database